db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo
  template:
    metadata:
      name: mongo-pod
      labels:
        app: mongo
    spec:
      containers:
        - name: mongo
          image: mongo
          volumeMounts:
            - name: mongo-storage
              mountPath: /data/db
      volumes:
        - name: mongo-storage
          persistentVolumeClaim:
            claimName: mongo-pvc

---
apiVersion: v1
kind: Service
metadata:
  name: mongo-srv
spec:
  type: ClusterIP 
  selector:
    app: mongo
  ports:
    - port: 27017
      targetPort: 27017
