server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: server
  template:
    metadata:
      name: server-pod
      labels:
        app: server
    spec:
      containers:
      - name: server
        image: laithharb/server:v2
---
apiVersion: v1
kind: Service
metadata:
  name: server-srv
spec:
  type: ClusterIP
  selector:
    app: server
  ports:
    - port: 3000
      targetPort: 3000
